0030799: Draw Harness, ViewerTest - setup uniforms via vshader command

vshaderprog command now supports setup custom uniforms